The value of [AVPlayerViewController isPictureInPicturePossible] is NO in the first attempt to enter PiP https://bugs.webkit.org/show_bug.cgi?id=204979

Reviewed by Jer Noble.

Source/WebCore:

Since [AVPlayerViewControl isPictureInPicturePossible] can be NO initially, we may fail to enter
the Picture-in-Picture mode.

This patch implements the mechanism to observe [AVPlayerViewControl isPictureInPicturePossible] after
a user requests to enter the Picture-in-Picture mode, and call [AVPlayerViewController startPictureInPicture]
when [AVPlayerViewController isPictureInPicturePossible] changes to YES.
A timer is added to monitor the status. If [AVPlayerViewController isPictureInPicturePossible] does not
change to YES in 0.5 second, we will give up the attempt.

* platform/ios/VideoFullscreenInterfaceAVKit.mm:
(-[WebAVPlayerViewController initWithFullscreenInterface:]):
(-[WebAVPlayerViewController dealloc]):
(-[WebAVPlayerViewController MY_NO_RETURN]):
(VideoFullscreenInterfaceAVKit::doEnterFullscreen):

Source/WebCore/PAL:

import AVKit/AVObservationController.h

* pal/spi/cocoa/AVKitSPI.h:


Canonical link: https://commits.webkit.org/222168@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258655 268f45cc-cd09-0410-ab3c-d52691b4dbfc