Source/WebCore/PAL/pal/spi/cocoa/AVKitSPI.h
@@ -27,6 +27,7 @@
 #import <wtf/SoftLinking.h>
 
 #if USE(APPLE_INTERNAL_SDK)
+#import <AVKit/AVObservationController.h>
 #import <AVKit/AVPlayerController.h>
 #else
 #if PLATFORM(IOS_FAMILY)
@@ -128,6 +129,14 @@ NS_ASSUME_NONNULL_END
 #else
 
 NS_ASSUME_NONNULL_BEGIN
+
+@class AVKeyValueChange;
+
+@interface AVObservationController<Owner> : NSObject
+- (instancetype)initWithOwner:(Owner)owner NS_DESIGNATED_INITIALIZER;
+- (id)startObserving:(id)object keyPath:(NSString *)keyPath includeInitialValue:(BOOL)shouldIncludeInitialValue observationHandler:(void (^)(Owner owner, id observed, AVKeyValueChange *change))observationHandler;
+- (void)stopAllObservation;
+@end
 
 @interface AVBackgroundView : UIView
 @property (nonatomic) BOOL automaticallyDrawsRoundedCorners;
